--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "graphql": "^0.13.2",
     "graphql-weaver": "^0.11.7",
     "node-fetch": "^2.1.2",
     "nodemon": "^1.17.3",
